...

fileprivate let todasCategoriasSeedInfo: [CategoriaSeedInfo] = [
    CategoriaSeedInfo(
        id: SeedIDs.idDiversos,
        nome: "Diversos",
        cor: Color(red: 0.35, green: 0.2, blue: 0.1),
        icon: "puzzlepiece",
        subcategorias: [
            SubcategoriaSeedInfo(id: SeedIDs.idSubCustosBancarios, nome: "Custos Bancários", icon: "dollarsign.bank.building.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubDesconhecido, nome: "Desconhecido", icon: "questionmark.app.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubDiversosGerais, nome: "Diversos", icon: "archivebox.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubRoupas, nome: "Roupas", icon: "tshirt"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubSaude, nome: "Saúde", icon: "heart.fill")
        ]
    ),
    CategoriaSeedInfo(
        id: SeedIDs.idEntretenimento,
        nome: "Entretenimento",
...
    CategoriaSeedInfo(
        id: SeedIDs.idComidasEBebidas,
        nome: "Comidas e Bebidas",
        cor: .teal,
        icon: "fork.knife",
        subcategorias: [
            SubcategoriaSeedInfo(id: SeedIDs.idSubBebidas, nome: "Bebidas", icon: "wineglass.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubCafe, nome: "Café", icon: "cup.and.heat.waves.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubComida, nome: "Comida", icon: "carrot.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubDoce, nome: "Doce", icon: "birthday.cake"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubFastFood, nome: "FastFood", icon: "takeoutbag.and.cup.and.straw"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubMantimentos, nome: "Mantimentos", icon: "cart.fill"),
            SubcategoriaSeedInfo(id: SeedIDs.idSubRestaurante, nome: "Restaurante", icon: "fork.knife.circle")
        ]
    ),
    CategoriaSeedInfo(
...
