...
                        } else {
                            Image(systemName: "square.grid.2x2")
                                .resizable()
                                .frame(width: 24, height: 24)
                                .foregroundStyle(.primary)

                            Text("Selecionar categoria")
                                .font(.title2)
                                .foregroundStyle(.primary)
                        }

                        Spacer()
                        Image(systemName: "chevron.right")
...
