...
            selectedSubcategoryFromSheet = nil
            isCategorySheetPresented = true
        }) {
            HStack {
                Image(systemName: "plus.circle.fill")
                    .foregroundStyle(.blue)
                Text("Adicionar Categoria ao Planejamento")
            }
            .frame(maxWidth: .infinity, alignment: .center)
            .frame(height: 30)
            .padding()
            .background(Color(.secondarySystemBackground))
            .cornerRadius(12)
...
