...
                ToolbarItem(placement: .navigationBarLeading) {
                    Button("Cancelar") { dismiss() }
                        .foregroundStyle(.red)
                        .accessibilityIdentifier("cancelButton")
                }
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(addTransactionVM.isEditando ? "Salvar" : "Adicionar", action: salvar)
                        .disabled(!addTransactionVM.podeSalvar)
                        .accessibilityIdentifier("saveButton")
                }
            }
            .sheet(isPresented: $isCategoryModalPresented) {
                CategorySelectionSheet(
...
                    selectedSubcategoryModel: $addTransactionVM.selectedSubcategoria,
                    isPresented: $isCategoryModalPresented,
                    selectedCategoryModel: $addTransactionVM.selectedCategoria
                )
            }
            .alert("Transação Registrada!", isPresented: $showSuccessAlert) {
                Button("OK") { dismiss() }
            }
            .errorAlert($addTransactionVM.errorMessage)
        }
    }

    private func salvar() {
...
